--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-contrib-cssmin",
   "description": "Compress CSS files.",
-  "version": "0.4.1",
+  "version": "0.4.2-a",
   "homepage": "https://github.com/gruntjs/grunt-contrib-cssmin",
   "author": {
     "name": "Grunt Team",
